src/test/ui/type_length_limit.stderr
error: reached the type-length limit while instantiating `std::mem::drop::<std::option::Op... G), (G, G, G), (G, G, G))))))>>`
  --> $SRC_DIR/libcore/mem/mod.rs:LL:COL
   |
LL | pub fn drop<T>(_x: T) { }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: consider adding a `#![type_length_limit="1094"]` attribute to your crate

error: aborting due to previous error

